# TinyCC

./: .gitignore  CMakeLists.txt  README.md
demo/: CMakeLists.txt
demo/libtcc-usage/: CMakeLists.txt
demo/libtcc-usage/src/: libtcc_test.c
examples/: CMakeLists.txt  Makefile  ex1.c  ex2.c  ex3.c  ex4.c  ex5.c
examples/win32/examples/: dll.c  fib.c  hello_dll.c  hello_win.c
libtcc/: CMakeLists.txt
libtcc/include/: libtcc.h
libtcc/src/: elf.h  i386-asm.c  i386-tok.h  libtcc.c  stab.h  tcc.h  tccasm.c  tccelf.c  tccgen.c  tccpp.c  tccrun.c  tcctok.h  x86_64-asm.h  x86_64-gen.c  x86_64-link.c
libtcc/src/linux/: config.h
libtcc/src/macosx/: config.h
libtcc/src/win32/: config.h  tccpe.c
runtime/: CMakeLists.txt
runtime/include/: stdarg.h  stddef.h  tcclib.h
runtime/lib/: bcheck.c  libtcc1.c  va_list.c
runtime/win32/: .gitignore  Makefile
tcc/: CMakeLists.txt
tcc/src/: tcc.c  tcctools.c
